# parallax

./: .gitignore  CLAUDE.md  CONSTITUTION.md  README.md  pixi.toml  pyproject.toml
.claude/hooks/: lint_check.py
.claude/skills/: audit.md  experiment.md  handoff.md  hypothesis.md  session-start.md
.claude/skills/audit/: SKILL.md
.claude/skills/experiment/: SKILL.md
.claude/skills/handoff/: SKILL.md
.claude/skills/hypothesis/: SKILL.md
.github/workflows/: ci.yml
docs/: ROADMAP.md  VISION.md  field-test-protocol.md  original_idea_v0.md  toolkit.md
docs/guides/: beamer-workflow.md
docs/plans/: 001_project_bootstrap.md  002_cmux_integration.md  003_agents_token_tier.md  004_merge_mode.md  005_layer2_design.md  006_beamer_workflow.md  007_port-skills-and-sync.md  008_handoff-spec-symmetry.md
docs/sessions/: 2026-02-19_implement-parallax-init.md  2026-02-20_hooks-skills-integration.md  2026-02-22_skill-directory-migration.md  2026-02-24_session-start-strategic-context.md  2026-02-25_agents-token-tier.md  2026-02-27_layer1-polish.md  2026-03-01_field-test-fixes.md  2026-03-01_merge-mode.md  2026-03-04_early-conflict-cache-refiner-fix.md  2026-03-04_writing-skills-layer2-design.md
scripts/: check_doc_staleness.py
src/parallax/: __init__.py
tests/: conftest.py
tests/test_cli/: test_config.py  test_e2e.py  test_init.py  test_main.py  test_refine.py  test_sync.py
tests/test_core/: test_config.py  test_interview.py  test_refiner.py  test_renderer.py
tests/test_integration/: __init__.py  test_generated_output.py  test_hooks.py
(+39 files in other folders)
